--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: sleepystew
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v5
         with:
@@ -43,4 +43,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/pelican-eggs/yolks:python_${{ matrix.tag }}
-            ghcr.io/parkervcp/yolks:python_${{ matrix.tag }}
+            ghcr.io/sleepystew/yolks:python_${{ matrix.tag }}
